# RustTest

./: .gitignore  Cargo.toml  README.md  build.rs  shader.frag  shader.vert
src/: main.rs  shader.frag.spv  shader.vert  shader.vert.spv
