[package]
name = "rust_test_cargo"
version = "0.0.0"
authors = ["Lonsdaleiter <lonsdaleiteproductions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.5.5"
wgpu = {version = "0.3", git = "https://github.com/gfx-rs/wgpu-rs", rev = "17077f49b5a5c0ee65c9733e8fb262036cf5d706"}
winit = "0.20.0"
