[package]
name = "rust_test_cargo"
version = "0.0.0"
authors = ["Lonsdaleiter <lonsdaleiteproductions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.5.5"
wgpu = "0.4"
winit = "0.20.0"
shaderc = "0.6"
